--- a/live2D/index.html
+++ b/live2D/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body style="height: 10000px;">
-    <script src="./autoload.js"></script>
+    <!-- <script src="./autoload.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/gh/AiCyan/img@latest/live2D/autoload.js"></script>
 </body>
 
 </html>
